--- a/portfolio.html
+++ b/portfolio.html
@@ -6,4 +6,5 @@
     <li> <a target="_blank" href="https://hyy.pe/">Hyype</a></li>
     <li> <a target="_blank" href="https://www.element.fi/">Element</a></li>
     <li> <a target="_blank" href="https://www.connext.network/">Connext</a></li>
+    <li> Atrium</li>
 </ul>
