--- a/portfolio.html
+++ b/portfolio.html
@@ -6,5 +6,6 @@
     <li> <a target="_blank" href="https://hyy.pe/">Hyype</a></li>
     <li> <a target="_blank" href="https://www.element.fi/">Element</a></li>
     <li> <a target="_blank" href="https://www.connext.network/">Connext</a></li>
-    <li> Atrium</li>
+    <li> <a target="_blank" href="https://atrium.art/">Atrium</a></li>
+    <li> Astaria </li>
 </ul>
