--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,7 @@
     <li> <a target="_blank" href="https://www.connext.network/">Connext</a></li>
     <li> <a target="_blank" href="https://atrium.art/">Atrium</a></li>
     <li> <a target="_blank" href="https://plex.engineer/">Plex</a></li>
+    <li> <a target="_blank" href="https://pwn.xyz/">PWN</a></li>
     <li> Astaria </li>
     <li> Alto </li>
 </ul>
