--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,7 @@
     <li> <a target="_blank" href="https://atrium.art/">Atrium</a></li>
     <li> <a target="_blank" href="https://plex.engineer/">Plex</a></li>
     <li> <a target="_blank" href="https://pwn.xyz/">PWN</a></li>
+    <li> <a target="_blank" href="https://www.daojones.wtf/">DAO Jones</a></li>
     <li> Astaria </li>
     <li> Alto </li>
 </ul>
