--- a/portfolio.html
+++ b/portfolio.html
@@ -10,6 +10,7 @@
     <li> <a target="_blank" href="https://plex.engineer/">Plex</a></li>
     <li> <a target="_blank" href="https://pwn.xyz/">PWN</a></li>
     <li> <a target="_blank" href="https://www.daojones.wtf/">DAO Jones</a></li>
+    <li> <a target="_blank" href="https://www.ngmi.global/">NGMI Global</a></li>
     <li> Astaria </li>
     <li> Alto </li>
 </ul>
