--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <br>Currently, I am the co-founder and CTO of <a target="_blank" href="https://slingshot.finance">Slingshot</a>, a decentralized exchange.<br>
             <br>I co-founded <a target="_blank" href="https://code4rena.com/">Code4rena</a>, a smart contract auditing DAO, and contribute to <a target="_blank" href="https://canto.io/">Canto</a>, a DeFi specific blockchain ecosystem.<br>
             <br>Previously, I founded a company called <a target="_blank" href="https://eng.ambcrypto.com/ethereum-is-money-asserts-whiteblocks-zak-cole/">Whiteblock</a>, which specialized in blockchain protocol testing, research, and development.<br>
+            <br>I also worked at Google and founded the Testing Working Group at the Ethereum Enterprise Alliance.<br>
             <br>I serve as advisor to several blockchain related companies, like <a target="_blank" href="https://cryptex.finance/">Cryptex</a>, <a target="_blank" href="https://defipulse.com">DeFi Pulse</a> and the <a target="_blank" href="https://syscoin.org/">Syscoin Foundation</a>.<br>
             <br>
             <br> If you don't know me, then get to know me by exploring the links in the table below.
