--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         </table>
 
-        <br> If you already know me and would like to reference or review some news articles that feature my opinions or work, the table below contains links to some relevant media.
+        <br> If you already know me and would like to reference or review some news articles that feature my opinions or work, the table below contains links to some relevant media.<br>
         <table>
             <tr>
 
