--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,6 @@
 <ul>
-    <li> Alto </li>
+    <li><a target="_blank" href="https://www.alto.build/">Alto</a></li>
     <li> Astaria </li>
-    <li><a target="_blank" href="https://www.tokensoft.io/">Tokensoft</a></li>
     <li> <a target="_blank" href="https://atrium.art/">Atrium</a></li>
     <li> <a target="_blank" href="https://www.connext.network/">Connext</a></li>
     <li> <a target="_blank" href="https://www.daojones.wtf/">DAO Jones</a></li>
@@ -13,5 +12,6 @@
     <li> <a target="_blank" href="https://pegasys.finance/">Pegasys Finance</a></li>
     <li> <a target="_blank" href="https://plex.engineer/">Plex</a></li>
     <li> <a target="_blank" href="https://pwn.xyz/">PWN</a></li>
+    <li><a target="_blank" href="https://www.tokensoft.io/">Tokensoft</a></li>
     <li> <a target="_blank" href="https://www.zkcross.org/">ZK Cross</a></li>
 </ul>
