--- a/stack.html
+++ b/stack.html
@@ -1,20 +1,29 @@
-Cordyceps sinesis (Mycelium) - 500mg
-Reishi (Mycelium and fruiting body) - 500mg
-Lions mane (Mycelium and fruiting body) - 500mg
-Vitamin A ~1200mcg
-Mycozil (candida and yeast balance) 
-B12 - 3000mcg
-Vitamin C - 750mcg
-Vitamin E - 6.7mg
-Zinc - 1mg
-Selenium - 15mcg
-Manganese - 0.1mg
-Vitamin D3 - 25mcg 
-Vitamin K - 60mcg
-Cranberry extract - 500mg
-Blend of ginger, marshmallow root, parsley, uva ursi, cramp bark, goldenseal - 930mg total
-Omega 3 - 60mg
-Magnesium - 50mg
-Copper - 52mcg 
-Thiamin - 3mg 
+I take all of the below every morning in the form of pills and tinctures.<br> 
+I try to drink 1 gallon of water a day and run 3-5 miles.<br> 
+I eat 90% plant based and 10% meat.<br>
+The meat I eat is mostly fish. I eat chicken and beef occasionally when eating out at nice restaurants. <br>
+I do not consume excess sugar, caffeine, or alcohol. I try to avoid breads. Cheese is ok. <br>
+This doesn't work for everyone, but it works for me. <br>
+Please consult your doctor before trying any of this. I am not a medical professional, just a guy trying to find what protocols work best for navigating this world.<br>    
+I sleep for at least 8 hours a night. If I don't, it has a terrible effect on my mood.<br>
+
+<li>Cordyceps sinesis (Mycelium) - 500mg</li>
+<li>Reishi (Mycelium and fruiting body) - 500mg</li>
+<li>Lions mane (Mycelium and fruiting body) - 500mg</li>
+<li>>Vitamin A ~1200mcg</li>
+<li>Mycozil (candida and yeast balance)</li>
+<li>B12 - 3000mcg</li>
+<li>Vitamin C - 750mcg</li>
+<li>Vitamin E - 6.7mg</li>
+<li>Zinc - 1mg</li>
+<li>Selenium - 15mcg</li>
+<li>Manganese - 0.1mg</li>
+<li>Vitamin D3 - 25mcg</li>
+<li>Vitamin K - 60mcg</li>
+<li>Cranberry extract - 500mg</li>
+<li>Blend of ginger, marshmallow root, parsley, uva ursi, cramp bark, goldenseal - 930mg total</li>
+<li>Omega 3 - 60mg</li>
+<li>Magnesium - 50mg</li>
+<li>Copper - 52mcg </li>
+<li>Thiamin - 3mg </li>
 
