--- a/stack.html
+++ b/stack.html
@@ -1,5 +1,6 @@
 I take all of the below every morning in the form of pills and tinctures.<br> 
 I try to drink 1 gallon of water a day and run 3-5 miles.<br> 
+I do not drink anything other than water or tea.<br>
 I eat 90% plant based and 10% meat.<br>
 The meat I eat is mostly fish. I eat chicken and beef occasionally when eating out at nice restaurants. <br>
 I do not consume excess sugar, caffeine, or alcohol. I try to avoid breads. Cheese is ok. <br>
