--- a/stack.html
+++ b/stack.html
@@ -11,7 +11,7 @@ I sleep for at least 8 hours a night. If I don't, it has a terrible effect on my
 <li>Cordyceps sinesis (Mycelium) - 500mg</li>
 <li>Reishi (Mycelium and fruiting body) - 500mg</li>
 <li>Lions mane (Mycelium and fruiting body) - 500mg</li>
-<li>>Vitamin A ~1200mcg</li>
+<li>Vitamin A ~1200mcg</li>
 <li>Mycozil (candida and yeast balance)</li>
 <li>B12 - 3000mcg</li>
 <li>Vitamin C - 750mcg</li>
