--- a/index.html
+++ b/index.html
@@ -29,20 +29,21 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://zscole.github.io/">
-    <meta property="og:title" content="Zak Cole | Ethereum Core Dev">
+    <meta property="og:title" content="Zak Cole | Ethereum Core Dev | Building ETH to $10K">
     <meta property="og:description" content="Founder of Ethereum Community Foundation. CEO of Number Group. 3 exits. Marine veteran. Building ETH to $10K.">
-    <meta property="og:image" content="https://zscole.github.io/headshot-og.jpeg">
+    <meta property="og:image" content="https://zscole.github.io/headshot-og-1200x630.jpeg">
     <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="1784">
+    <meta property="og:image:height" content="630">
     <meta property="og:image:alt" content="Zak Cole - Ethereum Core Developer">
     
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://zscole.github.io/">
-    <meta property="twitter:title" content="Zak Cole | Ethereum Core Dev">
-    <meta property="twitter:description" content="Founder of Ethereum Community Foundation. CEO of Number Group. 3 exits. Marine veteran. Building ETH to $10K.">
-    <meta property="twitter:image" content="https://zscole.github.io/headshot-og.jpeg">
-    <meta property="twitter:site" content="@0xzak">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@0xzak">
+    <meta name="twitter:creator" content="@0xzak">
+    <meta name="twitter:title" content="Zak Cole | Ethereum Core Dev | Building ETH to $10K">
+    <meta name="twitter:description" content="Founder of Ethereum Community Foundation. CEO of Number Group. 3 exits. Marine veteran. Building ETH to $10K.">
+    <meta name="twitter:image" content="https://zscole.github.io/headshot-og-1200x630.jpeg">
+    <meta name="twitter:image:alt" content="Zak Cole - Ethereum Core Developer">
     
     <!-- Fonts and Styles -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
