--- a/index.html
+++ b/index.html
@@ -37,13 +37,15 @@
     <meta property="og:image:alt" content="Zak Cole - Ethereum Core Developer">
     
     <!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@0xzak">
-    <meta name="twitter:creator" content="@0xzak">
-    <meta name="twitter:title" content="Zak Cole | Ethereum Core Dev | Building ETH to $10K">
-    <meta name="twitter:description" content="Founder of Ethereum Community Foundation. CEO of Number Group. 3 exits. Marine veteran. Building ETH to $10K.">
-    <meta name="twitter:image" content="https://zscole.github.io/headshot-og-1200x630.jpeg">
-    <meta name="twitter:image:alt" content="Zak Cole - Ethereum Core Developer">
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@0xzak" />
+    <meta name="twitter:creator" content="@0xzak" />
+    <meta name="twitter:title" content="Zak Cole | Ethereum Core Dev | Building ETH to $10K" />
+    <meta name="twitter:description" content="Founder of Ethereum Community Foundation. CEO of Number Group. 3 exits. Marine veteran. Building ETH to $10K." />
+    <meta name="twitter:image" content="https://zscole.github.io/headshot-og-1200x630.jpeg" />
+    <meta name="twitter:image:alt" content="Zak Cole - Ethereum Core Developer" />
+    <meta name="twitter:domain" content="zscole.github.io" />
+    <meta name="twitter:url" content="https://zscole.github.io/" />
     
     <!-- Fonts and Styles -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
