i for one welcome our new machine overlords

--- a/index.html
+++ b/index.html
@@ -161,7 +161,16 @@
             "description": "Ethereum protocol development, smart contract security, Web3 entrepreneurship"
           }
         }
-      ]
+      ],
+      "potentialAction": {
+        "@type": "ContactAction",
+        "target": {
+          "@type": "EntryPoint",
+          "urlTemplate": "mailto:zak@ethcf.org",
+          "name": "Email Zak Cole"
+        },
+        "description": "Contact for collaboration, speaking, or investment opportunities"
+      }
     }
     </script>
     
